Fixed horizontal scroll and Footer triangle transparent background
Caused by 100vw. Changed it to 99.

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,20 +1,23 @@
 footer {
     color: white;
-    /* background-color: #291261; */
-    background: hsla(256, 57%, 23%, 1);
-    background: linear-gradient(180deg, hsla(256, 57%, 23%, 1) 20%, hsla(257, 72%, 41%, 1) 69%);
     min-height: 40vh;
+    width: 99vw;
     height: auto;
     width: auto;
-    position: relative;
     overflow: hidden;
 }
 
-footer .triangle-border {
+footer .border-invisible {
+    background-color: hsla(0, 81%, 49%, 0);
+    position: relative;
+
+}
+
+footer .border-triangle {
     width: auto;
     height: 0;
-    border-left: 50vw solid white;
-    border-right: 50vw solid white;
+    border-left: 50vw solid hsla(0, 0%, 100%, 0);
+    border-right: 50vw solid rgba(0, 0, 255, 0);
     border-bottom: 50px solid hsla(256, 57%, 23%, 1);
     border-bottom: 50px solid linear-gradient(180deg, hsla(256, 57%, 23%, 1) 20%, hsla(257, 72%, 41%, 1) 69%);
 
@@ -24,14 +27,20 @@ footer .polygon-fill {
     width: 100%;
     height: 100%;
     position: absolute;
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 40%);
+    clip-path: polygon(0 0, 90% 0, 100% 200%, 0 40%);
     background: hsla(256, 57%, 23%, 1);
     background: linear-gradient(180deg, hsla(256, 57%, 23%, 1) 20%, hsla(257, 72%, 41%, 1) 69%);
 }
 
 footer .content {
-    margin: 0;
-    padding: 1em;
+    background: hsla(256, 57%, 23%, 1);
+    background: linear-gradient(180deg, rgb(40, 21, 95) 20%, rgb(76, 35, 180) 69%);
+    min-height: 40vh;
+    height: auto;
+    width: auto;
+    overflow: hidden;
+    position: relative;
+    margin: 0 auto;
     text-align: center;
 }
 
@@ -41,7 +50,7 @@ footer .icons {
     align-items: center;
     gap: 1em;
     padding: 1em;
-
+    user-select: none;
 }
 
 footer .copyright {
