--- a/src/index.css
+++ b/src/index.css
@@ -25,8 +25,11 @@ main {
   justify-content: center;
   min-height: 100vh;
   max-width: 1920px;
-  padding: 0 20px;
   margin: 0 auto;
+  margin-bottom: 4em;
+  padding: 0.5em;
+  box-sizing: border-box;
+  position:relative;
 }
 
 h1 {
