--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,10 +1,11 @@
 .home {
     /* background-image: url("../assets/whiteswiggles.jpg"); */
     height: 100vh;
-    width: 100vw;
+    width: 99vw;
+    padding: 2em;
     display: flex;
     box-sizing: border-box;
-    margin-bottom: 4em;
+    margin-bottom: 1em;
     position: relative;
 }
 
@@ -13,7 +14,7 @@
     background: linear-gradient(90deg, hsla(333, 100%, 53%, 1) 0%, hsla(33, 94%, 57%, 1) 70%);
     filter: drop-shadow(0 0 1em #b9a6a6);
     padding: 2em;
-    margin-bottom: 0em;
+    margin-bottom: 2em;
     border-radius: 20px;
     min-height: 500px;
     height: fit-content;
